# Potato-Lamppost-Convex-Hull-Closest-Pair

./: CMakeLists.txt  Graphics Planning.docx  Group-Project.cbp  Group-Project.depend  Group-Project.layout  SDL_Plotter.h  closest_pair.cpp  closest_pair.h  color_rgb.cpp  color_rgb.h  convexHull.cpp  convexHull.h  curve.cpp  curve.h  font.cpp  font.h  font.txt  lamppostrgb.txt  line.cpp  line.h  main.cpp  numbers.txt  nums.txt  point.cpp  point.h
